Avance de Insercion de Productos

--- a/MVCVenta/Web.config
+++ b/MVCVenta/Web.config
@@ -11,6 +11,10 @@
       providerName="System.Data.SqlClient" />
     <add name="BD_VentasConnectionString" connectionString="Data Source=.;Initial Catalog=BD_Ventas;User ID=sa;Password=12345"
       providerName="System.Data.SqlClient" />
+    <add name="BD_VentasConnectionString1" connectionString="Data Source=MININT-LD4KHBK\SQLEXPRESS2008R2;Initial Catalog=BD_Ventas;User ID=sa;Password=123456"
+      providerName="System.Data.SqlClient" />
+    <add name="BD_VentasConnectionString2" connectionString="Data Source=LAB02-28;Initial Catalog=BD_Ventas;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
