--- a/MVCVenta/MVCVenta.csproj
+++ b/MVCVenta/MVCVenta.csproj
@@ -14,6 +14,7 @@
     <AssemblyName>MVCVenta</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -85,6 +86,7 @@
     <Content Include="Global.asax" />
     <Content Include="Views\Producto\Create.aspx" />
     <Content Include="Views\Producto\Index.aspx" />
+    <Content Include="Imagenes\Logo-tienda-de-hardware.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
